--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h3>De L'analise de sensibilité des </br>
+					<h3>De L'analyse de sensibilité des </br>
 						systèmes multi-agents à l'utilisation de OpenMole</h3>
 					<p style="text-align:center;">
 						<small>Par <a href="http://geolab.univ-bpclermont.fr/spip.php?article184">Etienne Delay</a></small> </br>
@@ -48,8 +48,8 @@
 					</section>
 					<section>
 						<h3>Explorer pour faire des choix</h3>
-						<h4>connaitre et agir sur la dépendance au chemin</h4>
-						<p><small>Les choix génrère des chemins conduisant au même <i>pattern</i></small></p>
+						<h4>connaître et agir sur la dépendance au chemin</h4>
+						<p><small>Les choix génèrent des chemins conduisant au même <i>pattern</i></small></p>
 						<img data-src="./img/differentpath.svg" alt="path" height="200" style="background:none; border:none; box-shadow:none;"></img>
 						</br>
 						<img data-src="./img/loop.svg" alt="Point de vue" height="150" align="right" style="background:none; border:none; box-shadow:none;"></img>
@@ -172,7 +172,7 @@
 					<section>
 						<h3>Chercher dans la donnée</h3>
 						<img src="./img/my_plot.png" alt="plot result BS" width="80%" style="background:none; border:none; box-shadow:none;">
-						<p>Observer les effets combiner de dépot ET diffusion de phéromones</p>
+						<p>Observer les effets combinés de dépot ET diffusion de phéromones</p>
 					</section>
 				</section>
 				<section>
@@ -194,12 +194,12 @@
 					</section>
 					<section>
 						<h3>Quelle mise en tension ?</h3>
-						<p><small>Des critères quantifiés pour "guider" une exploration automatisé</small></p>
+						<p><small>Des critères quantifiés pour "guider" une exploration automatisée</small></p>
 						<img src="./img/tapis_roulant.svg" alt="mexico" width="45%" style="background:none; border:none; box-shadow:none;">
 					</section>
 					<section>
 						<h3>Formaliser les attentes</h3>
-						<p><small>Quelle valeurs de (diffusion, evaporation) minimise le temps de consommation des trois tas de nourriture ?</small></p>
+						<p><small>Quelles valeurs de (diffusion, évaporation) minimisent le temps de consommation des trois tas de nourriture ?</small></p>
 						<img src="./img/ants_objectives.svg" alt="objectifs" width="45%" style="float:left;background:none; border:none; box-shadow:none;">
 						<ul width="40%">
 							<li>Objectif, minimiser le temps pour épuiser la ressource</li>
@@ -215,13 +215,13 @@
 						<p><small>Le Behavior Search est intégré à Netlogo depuis la version 6</small></p>
 					</section>
 					<section>
-						<h3>Une petite conclusion à mis parcourt</h3>
+						<h3>Une petite conclusion à mi-parcours</h3>
 						<ul>
-							<li>Les algo. génétique rationalise un peut le calcul</li>
+							<li>Les algo. génétiques rationaliseny un peu le calcul</li>
 							<li>Mais : </li>
 							<ul>
-								<li>On a besoin de paraléliser à plus grande échelle</li>
-								<li>Utiliser des algo penser pour l'exploration ABM</li>
+								<li>On a besoin de paralléliser à plus grande échelle</li>
+								<li>Utiliser des algo. pensés pour l'exploration ABM</li>
 							</ul>
 						</ul>
 					</section>
@@ -288,7 +288,7 @@ val evolution =
 					</section>
 					<section>
 						<h3>Les environnements</h3>
-						<p>Les environnements pris en comptes</p>
+						<p>Les environnements pris en compte</p>
 						<ul>
 							<li>Multi-thread</li>
 							<li>Delegation through SSH</li>
@@ -375,8 +375,8 @@ val env = LocalEnvironment(10)
 					</section>
 					<section>
 						<h3>Pomic avec R et OpenMole</h3>
-						<p>Pomic (<i>Pattern Oriented Modelling Information Criterion</i>) est un package R pour évaluer l'impacte des choix danss du <i>pattern oriented modeling</i></p>
-						
+						<p>Pomic (<i>Pattern Oriented Modelling Information Criterion</i>) est un package R pour évaluer l'impact des choix dans du <i>pattern oriented modeling</i></p>
+
 					</section>
 				</section>
 				<section>
@@ -411,7 +411,7 @@ val env = LocalEnvironment(10)
 	      <section>
 	        <h2>Merci de votre attention</h2>
 	        <img src="./img/wokshop.jpg" alt="workshop2016" width="100%" style="background:none; border:none; box-shadow:none;">
-					<p><small>L'équipe OpenMole c'est aussi une aventure humaine qui se constuit sur du papier !</small></p>
+					<p><small>L'équipe OpenMole c'est aussi une aventure humaine qui se construit sur du papier !</small></p>
 	      </section>
 			</div>
 		</div>
