--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 					<section>
 						<h3>or change your approach!</h3>
 						<p><small>Organize a tension between the Input - Output choices</small></p>
-						<img src="./img/tension_in_out.png" alt="mexico" width="90%" style="background:none; border:none; box-shadow:none;">
+						<img src="./img/tension_in_out.svg" alt="mexico" width="90%" style="background:none; border:none; box-shadow:none;">
 					</section>
 					<section>
 						<h3>Where can I pull?</h3>
