--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Introduction OpenMole</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/beige.css">
@@ -28,8 +28,8 @@
 					<h3>De L'analyse de sensibilité des </br>
 						systèmes multi-agents à l'utilisation de OpenMole</h3>
 					<p style="text-align:center;">
-						<small>Par <a href="http://geolab.univ-bpclermont.fr/spip.php?article184">Etienne Delay</a></small> </br>
-						<small>13 décembre 2017, <a href ="https://www.openstreetmap.org/?mlat=14.73201&mlon=-17.43287#map=18/14.73202/-17.43287">Dakar</a></small></br>
+						<small>Par Etienne Delay</small> </br>
+						<small>17 octobre 2022, <a href ="https://www.openstreetmap.org/?mlat=14.73201&mlon=-17.43287#map=18/14.73202/-17.43287">Aulnay sous bois</a></small></br>
 						<small><a href="https://www.openmole.org/Who+are+we.html">L'équipe Openmole</a> : Romain REUILLON, Mathieu LECLAIRE, Jonathan PASSERAT-PALMBACH, Paul CHAPRON, Guillaume CHEREL, Etienne DELAY, Julien PERRET, Sebastien REY-COYREHOURCQ</small>
 					</p>
 				</section>
